[package]
name = "virtual_alloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=[]
hash_map_debug =[]
log_rust_global_alloc=[]
bin_features = ["tikv-jemallocator"]
puffin_profiling = ["puffin","puffin_http"]
local_api_clib=[]
global_api_clib=[]
log_allocations=[]

[dependencies]
libc = "0.2.153"
x86_64 = { version = "0.14.11",default-features = false,features = ["instructions"] }
rand = {version = "0.8.5",features = ["small_rng"]}
ahash = { version = "0.8.7" ,default-features = false,features = ["std"]}
tikv-jemallocator = { version = "0.5.4",optional = true }
static_assertions = "1.1.0"
radium = {git="https://github.com/youknowone/ferrilab.git",rev="4a301c3a223e096626a2773d1a1eed1fc4e21140"}
array-init = "2.1.0"
next-gen={version = "0.1.1",default-features = false}
puffin = { version = "0.19.0",optional = true }
puffin_http = { version = "0.16.0",optional = true}
tracing = {version = "0.1.40",features = ["release_max_level_warn"]}
tracing-subscriber = "0.3.18"
itertools = "0.12.1"
atom="0.4.0"
fast-clock = "0.1.1"

[[bin]]
name = "virtual_alloc"
required-features=["bin_features"]

[lib]
crate-type = ["staticlib"]
name= "virtual_alloc"

[profile.release]
debug = 2