[package]
name = "virtual_alloc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default=[]
hash_map_debug =[]

[dependencies]
libc = "0.2.153"
x86_64 = { version = "0.15",default-features = false,features = ["instructions"] }
rand = {version = "0.9.2",features = ["small_rng"]}
xxhash-rust={version = "0.8.15",features = ["xxh3"]}
static_assertions = "1.1.0"
radium = {version = "1.1.1"}
array-init = "2.1.0"
next-gen={version = "0.1.1",default-features = false}
tracing = {version = "0.1.40",features = ["release_max_level_warn"]}
itertools = "0.12.1"
atom="0.4.0"
buddy-bitmap = { path = "../buddy-bitmap" }

[profile.release]
debug = 2
